fix: stretching of cells and rows examples: add stretch cell example

--- a/packages/editor/src/core/components/Cell/index.css
+++ b/packages/editor/src/core/components/Cell/index.css
@@ -7,6 +7,9 @@
 
 .react-page-cell {
   height: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
   box-sizing: border-box;
   &-inline-left {
     float: left;
@@ -19,6 +22,10 @@
   &-has-inline-neighbour {
     float: none;
     width: 100%;
+  }
+
+  &-has-inline-neighbour > .react-page-cell {
+    display: block;
   }
 
   & &-inner {
